--- a/templates/index.eex
+++ b/templates/index.eex
@@ -1,9 +1,6 @@
-<h1>All the Bears</h1>
-
+<h1>All The Bears!</h1>
 <ul>
   <%= for bear <- bears do %>
     <li> <%= bear.name %> - <%= bear.type %> </li>
-  <%= end %>
+  <% end %>
 </ul>
-
-<%= inspect(bears) %>
