--- a/templates/show.eex
+++ b/templates/show.eex
@@ -1,3 +1,1 @@
-<h1>Show bear</h1>
-
-<p> Is <%= bear.name %> hibernating? <strong> <%= bear.hibernating %> </strong> </p>
+<h1>Show Bear</h1><p> Is <%= bear.name %> hibernating? <strong> <%= bear.hibernating %> </strong> </p>
